commit from github desktop
绪论完成！
其实我还是没搞清楚这个是咋操作的为啥一和github同步之后latexmk就不好用了反而xelatex可以用。。。

--- a/bib/chap1.bib
+++ b/bib/chap1.bib
@@ -1,10 +1,10 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Jiayi Liu at 2019-01-16 14:55:11 -0800 
+%% Created for Jiayi Liu at 2019-01-16 14:55:11 -0800
 
 
-%% Saved with string encoding Unicode (UTF-8) 
+%% Saved with string encoding Unicode (UTF-8)
 
 
 
@@ -549,3 +549,14 @@
 	Author = {Aagaard, K and Ma, J and Antony, KM and Ganu, R and Petrosino, J and Versalovic, J},
 	Title = {The placenta harbors a unique microbiome. Sci Transl Med 6: 237ra65},
 	Year = {2014}}
+
+@article{thomas1982association,
+  title={Association between Clostridium difficile and enterocolitis in Hirschsprung's disease},
+  author={Thomas, DFM and Malone, M and Fernie, DS and Bayston, R and Spitz, L},
+  journal={The Lancet},
+  volume={319},
+  number={8263},
+  pages={78--79},
+  year={1982},
+  publisher={Elsevier}
+}
