--- a/tex/chap1intro.tex
+++ b/tex/chap1intro.tex
@@ -12,7 +12,7 @@
 \section{人体肠道菌群及其早期定植特点}
 肠道菌群是指定植于人或其他动物消化道内的微生物群落，人体肠道也是体内最大的免疫器官。作为人体本身和外部环境的主要界面，肠道必须保护其免收有害抗原（如毒素和病原体）的侵害，同时容纳和耐受对自身健康有益的共生细菌——这是一项艰巨的任务，因为细菌病原体和共生菌之间平衡的改变将肠道从健康的肠内稳态（intestinal homeostasis）\cite{collier2005innate}转变为不受控制的验证状态，这可能导致肠道本身的损伤，也可能干扰其他系统的正常生理功能，从而与多种疾病的发生发展息息相关，包括炎症性肠病（Inflammatory Bowel Disease，IBD）\cite{ni2017gut}，II型糖尿病\cite{harsch2018role}，自闭症\cite{de2014altered, de2013fecal}等疾病。共生细菌为人类宿主的健康提供诸多保障，包括维持肠内稳态\cite{hooper2001commensal}，保护其免受外界伤害\cite{rakoff2004recognition}，维护和支持消化功能\cite{guarner2006mechanisms}，调节肠道免疫功能\cite{round2009gut,abreu2010toll}等。
 长久以来，新生儿肠道被认为是一种无菌环境，但近年的研究证实了胎粪中的微生物群和羊水中的潜在微生物群的相关性\cite{ardissone2014meconium}，以及早产儿气道内的不动杆菌属(\textit{Acinetobacter})\cite{lohmann2014airway}，这表明肠道微生物的获取可能从胎儿在非无菌宫内条件下就开始了。然而，在重复这些研究结果之前，考虑到非基于培养的测序方法\cite{pennisi2014our}中细菌污染的影响以及取样时羊膜可能不完整，其结果应被谨慎考虑。
-在生理条件下的胎儿肠道在出生后迅速开始获得共生微生物群；并且如前所述，该过程甚至可开始于子宫内。微生物群的初始组成来源于胎儿母亲的结肠和阴道菌群，阴道分娩的婴儿可以通过产道获得。这些微生物群包括肠杆菌(\textit{Enterobacteriae})，肠球菌（\textit{Enterococci}）和葡萄球菌（\textit{Staphylococci}）\cite{backhed2005host}。更多研究表明，菌群通过胎盘转移也可能影响肠道微生物组的发育\cite{aagaard2014placenta}。肠道微生物群的获得大致上是一个有顺序的过程，从杆菌门（\textit{Bacilli}），再到gamma变形菌门（\textit{Gammaproteobacteria}）和梭菌门（\textit{Clostridia}），接着其余菌群的连续定植\cite{la2014patterned}。通过母乳喂养，更多益生元及其他免疫因子被引入肠道，能够后续促进倡导共生菌的生长，进一步发展和改变肠道微生物群，从而有益于婴儿​​\cite{ouwehand2005prebiotics}。与剖宫产和/或配方奶喂养的婴儿相比，纯母乳喂养和通过阴道分娩出生的足月婴儿表现出良好的肠道微生物群组成，双歧杆菌（\textit{Bifidobacteria}）数量较多，艰难梭菌(\textit{Clostridium difficile})和大肠杆菌（\textit{Escherichia coli}）数量较少\cite{penders2006factors}。
+在生理条件下的胎儿肠道在出生后迅速开始获得共生微生物群；并且如前所述，该过程甚至可开始于子宫内。微生物群的初始组成来源于胎儿母亲的结肠和阴道菌群，阴道分娩的婴儿可以通过产道获得。这些微生物群包括肠杆菌(\textit{Enterobacteriae})，肠球菌（\textit{Enterococci}）和葡萄球菌（\textit{Staphylococci}）\cite{backhed2005host}。更多研究表明，菌群通过胎盘转移也可能影响肠道微生物组的发育\cite{aagaard2014placenta}。肠道微生物群的获得大致上是一个有顺序的过程，从杆菌门（\textit{Bacilli}），再到$\gamma$-变形菌门（\textit{Gammaproteobacteria}）和梭菌门（\textit{Clostridia}），接着其余菌群的连续定植\cite{la2014patterned}。通过母乳喂养，更多益生元及其他免疫因子被引入肠道，能够后续促进肠道共生菌的生长，进一步发展和改变肠道微生物群，从而有益于婴儿​​\cite{ouwehand2005prebiotics}。与剖宫产和/或配方奶喂养的婴儿相比，纯母乳喂养和通过阴道分娩出生的足月婴儿表现出良好的肠道微生物群组成，双歧杆菌（\textit{Bifidobacteria}）数量较多，艰难梭菌(\textit{Clostridium difficile})和大肠杆菌（\textit{Escherichia coli}）数量较少\cite{demehri2013hirschsprung}。
 
 \section{儿科炎症性肠病与肠道菌群}
 \label{sec:enterocolitis}
@@ -20,28 +20,24 @@
 
 \subsection{坏死性小肠结肠炎概述}
 坏死性小肠结肠炎（NEC）是新生儿最常见的胃肠道急症之一。它是一种以小肠黏膜缺血性坏死为特征的疾病，与重度炎症、肠道产气菌侵袭、产气侵入肠道壁和门静脉系统相关\cite{neu2011necrotizing}。大多数坏死性小肠结肠炎患儿在发病前健康状况、生长情况和喂养情况均良好\cite{hallstrom2006laboratory}。早期最常见症状表现为喂养耐受性突然变化。腹部体征包括腹胀、腹部压痛、喂养残留、呕吐（通常为胆汁）、腹泻、血便、肠内喂养管可见胆汁\cite{walsh1988necrotizing, yu1980improving}。其他非特异体征包括腹壁红斑、痉挛和硬结。非特异性系统性发现包括呼吸暂停、呼吸衰竭，嗜睡，体温不稳定。更严重者可发生由感染性休克引起的低血压，20\%的NEC患儿被诊断有并发的菌血症\cite{kliegman1984necrotizing}。
-因已发表研究的诊断和数据收集不一致，故其发病率尚未明确\cite{zani2015scavenger}。在不同地区间的发病率无明显差异：美国一项研究统计表明：在过去25年内NEC的发病率稳定在0.3-2.4例/1000新生儿，且常见于胎龄最小的早产儿中\cite{pickard2009short}；来自其他国家（包括加拿大、日本等）的统计研究也得出了类似的发病率结论\cite{kawase2006gastrointestinal}。然而，新生儿胎龄对NEC发病的影响较大——NEC在早产儿中发病率更高，且与出生体重和孕龄呈负相关：出生体重低于1000g的新生儿发病率最高（尽管不同研究显示发病率在4\%~50\%或更高）；出生体重1501-2000Gd 新生儿，其NEC发病率急剧下降到3.8个/1000活产新生儿\cite{stoll2015trends}。同样对于胎龄为35-36周的新生儿，其发病率也骤减。尽管总体上存在差异，但来自世界各地的研究数据始终表明，随着胎龄和孕周的降低，NEC发病率增加\cite{backhed2005host,rees2010national,yee2012incidence}。
+因已发表研究的诊断和数据收集不一致，故其发病率尚未明确\cite{zani2015scavenger}。在不同地区间的发病率无明显差异：美国一项研究统计表明：在过去25年内NEC的发病率稳定在0.3-2.4例/1000新生儿，且常见于胎龄最小的早产儿中\cite{pickard2009short}；来自其他国家（包括加拿大、日本等）的统计研究也得出了类似的发病率结论\cite{kawase2006gastrointestinal}。然而，新生儿胎龄对NEC发病的影响较大——NEC在早产儿中发病率更高，且与出生体重和孕龄呈负相关：出生体重低于1000g的新生儿发病率最高（尽管不同研究显示发病率在4\%~50\%或更高）；出生体重介于1501-2000g的新生儿，其NEC发病率急剧下降到3.8个/1000活产新生儿\cite{stoll2015trends}。同样对于胎龄为35-36周的新生儿，其发病率也骤减。尽管总体上存在差异，但来自世界各地的研究数据始终表明，随着胎龄和孕周的降低，NEC发病率增加\cite{backhed2005host,rees2010national,yee2012incidence}。
 近年来，尽管NEC的早期识别和积极护理治疗已显著改善其临床结果，但其发病率仍然未降低，特别在早产极低出生体重的婴儿中，其发病率依然居高不下。因而，寻找其病因并相应地采取预防措施显得尤为重要。
-坏死性较长结肠炎发病机制尚未明确，但研究表明它是多因素决定的：促炎细胞极联反映加剧的缺血和/或再灌注损伤可能起了重要作用。动物模型中的大量实验研究结果表明，倡导缺血，免疫功能不成熟和免疫功能障碍的相互作用使得肠道菌群易位穿过肠黏膜屏障，导致炎症介质，包括白三烯，肿瘤坏死因子（Tumor Necrosis Factor，TNF），血小板活化因子（Platelet Activating Factor，PAF）扩散与腔内胆汁酸释放，引发不同程度的肠道损伤，并损伤引发全身受累\cite{good2015breast}（good m 2015 mucosal immunol, clark da 1990 j pediatr）。流行病学调查表明了感染作为因素之一，包括格兰阴性菌、真菌和病毒\cite{}（de la cochetiere mf 2004 pediatr res, hodzic z 2017 front pediatr, denning tl 2017 semin perinatol）。
-既往许多动物实验发现，无菌（Germ Free，GF）小鼠模型在出生后不并发NEC\cite{}（rozenfeld2001role），引入正常小鼠肠道菌群后，肠道内潘氏细胞（Paneth cells）受损伤，肠道上皮细胞（Intetinal Epithelial Cell）的TLR4信号介导增强\cite{}（white2017paneth）。
-近年来临床研究也致力于发现NEC的特定致病菌。有研究表明，与对照组相比，早发型NEC的患儿在发病早期，肠道内厌氧芽孢杆菌丰度增加;而晚发型NEC患儿在发病前6天大肠志贺杆菌（\textit{Escherichia shigella}）比例增加，发病前3天，阪崎肠杆菌（\textit{Cronobacter sakazakii}）显著升高\cite{}[y zhou plosone 2015]。美国一项大型前瞻性病例对照研究发现，在混合模型中，NEC的发病与肠道内革兰氏阴性厌氧杆菌Gamma变形菌（\textit{Gammaproteobacteria}）的丰度呈正相关，与专性厌氧菌，尤其是厚壁\textit{Negativicutes}和梭状芽胞杆菌（\textit{Clostridia}）丰度呈负相关（Barbara B Warner 2016 Lancet）。
+坏死性较长结肠炎发病机制尚未明确，但研究表明它是多因素决定的：促炎细胞极联反映加剧的缺血和/或再灌注损伤可能起了重要作用。动物模型中的大量实验研究结果表明，倡导缺血，免疫功能不成熟和免疫功能障碍的相互作用使得肠道菌群易位穿过肠黏膜屏障，导致炎症介质，包括白三烯，肿瘤坏死因子（Tumor Necrosis Factor，TNF），血小板活化因子（Platelet Activating Factor，PAF）扩散与腔内胆汁酸释放，引发不同程度的肠道损伤，并损伤引发全身受累\cite{good2015breast,miller1990casein}。流行病学调查表明了感染作为因素之一，包括格兰阴性菌、真菌和病毒\cite{de2004early,hodzic2017role,denning2017pathogenesis}。
+既往许多动物实验发现，无菌（Germ Free，GF）小鼠模型在出生后不并发NEC\cite{rozenfeld2001role}，引入正常小鼠肠道菌群后，肠道内潘氏细胞（Paneth cells）受损伤，肠道上皮细胞（Intetinal Epithelial Cell）的TLR4信号介导增强\cite{white2017paneth}。
+近年来临床研究也致力于发现NEC的特定致病菌。有研究表明，与对照组相比，早发型NEC的患儿在发病早期，肠道内厌氧芽孢杆菌丰度增加;而晚发型NEC患儿在发病前6天大肠志贺杆菌（\textit{Escherichia shigella}）比例增加，发病前3天，阪崎肠杆菌（\textit{Cronobacter sakazakii}）显著升高\cite{zhou2015longitudinal}。美国一项大型前瞻性病例对照研究发现，在混合模型中，NEC的发病与肠道内革兰氏阴性厌氧杆菌 $\gamma$ - 变形菌（\textit{Gamma-Proteobacteria}）的丰度呈正相关，与专性厌氧菌，尤其是厚壁\textit{Negativicutes}和梭状芽胞杆菌（\textit{Clostridia}）丰度呈负相关\cite{la2014patterned}。
+
 \subsection{先天性巨结肠，先天性巨结肠肠炎与肠道菌群紊乱}
-先天性巨结肠（Hirschsprung’ s disease，HD）是病变肠段粘膜下和肌间神经丛副交感神经节细胞缺失，导致病变结肠持续痉挛收缩，近端肠管扩张，肠内容物排出受阻为特征的一种先天性肠道动力障碍性疾病。该病是小儿外科常见疾病，占消化道畸形的第二位{langer}。HD可以经外科手术切除无神经节细胞的肠管而治愈。然而，有高达40\%的HD患儿在巨结肠根治术后仍可能罹患巨结肠小肠结肠炎（Hirschsprung’s disease associated enterocolitis，HAEC），说明缺乏神经节细胞并非HAEC唯一的病因。HAEC是HD最常见和最严重的并发症，文献报道其发病率为20\%-58\%，复发率达50\%，病死率为1\%-10\%{frykman}。
-HAEC的确切发病机制目前仍不清楚{km austin}。近年来有研究显示，由于先天性巨结肠肠道神经系统的紊乱可能增加肠道对特定病原菌感染和定植的敏感性，肠道微生态失衡可能可能是HAEC的主要发病机制{frdemehri}。巨结肠根治术后发作的HAEC的治疗（去除机械性梗阻病因后）包括肠道休息、肠道灌洗、全身抗生素应用等，表明肠道菌群紊乱可能是HAEC起病和复发的启动因素。如何在源头上明确HAEC致病菌，并阻断肠道微生态失衡的恶性循环，可能是防治HAEC的解决之道。
-近30年来许多临床和动物研究致力于发现HAEC特定的致病菌，尽管有一些致病菌被认为可能与HAEC发病有关，如艰难梭状芽孢杆菌{Thomas dfm1982}，大肠杆菌{Thomas dfm1986},轮状病毒{D Wilson-storey}等，但迄今为止，尚无明确结论，主要原因是受限于依赖细胞培养的技术，以及肠道菌群的复杂性。由于肠道菌群数量庞大，种类繁多，有85\%的肠道细菌无法由培养得到。有学者利用扩增rDNA限制性片段分析技术对一例反复发作HAEC的3岁患儿进行了纵向系列粪便（共15次）检测，发现HAEC发作与特定肠道菌群分布模式有关，并受到应用抗生素的影响{c de filippo}。
-目前国际上应用宏基因组学技术研究HAEC肠道菌群的工作才刚刚起步。经文献检索，相关发表文章共4篇，其中2篇是本课题组的临床前期研究{z yan, y li}。我们在手术中提取HAEC和HD患儿不同肠道部位的粪便标本，比较其肠道菌群特点。研究中最大的发现是，HAEC和HD患儿肠道菌群种类存在明显差异，而远端无神经节细胞肠道和近端有神经节细胞肠道内样本的肠道菌群种类并无明显差别。这表明，有无神经节细胞并不是影响肠道菌群组成的主要决定因素；而有无特定肠道菌群的定植可能是影响HAEC产生和发展的重要原因。同时，我们也发现，肠道菌群分布也跟患儿的年龄是有一定关系的，不同年龄阶段的患儿肠道微生物菌群差异明显。说明肠道菌群随着患儿年龄的改变有所不同，这也符合从新生儿出生时消化道的无菌状态到2岁时接近成人的总体变化规律。我们进一步研究发现，曾经罹患HAEC患儿在症状缓解期肠道菌群构成依然与发病时的HAEC患儿相似，提示导致HAEC发病的特定肠道菌群分布模式可能持续存在，这也可能是HAEC复发率高达50\%的原因{y li}。
+先天性巨结肠（Hirschsprung’ s disease，HD）是病变肠段粘膜下和肌间神经丛副交感神经节细胞缺失，导致病变结肠持续痉挛收缩，近端肠管扩张，肠内容物排出受阻为特征的一种先天性肠道动力障碍性疾病。该病是小儿外科常见疾病，占消化道畸形的第二位\cite{langer1999transanal}。HD可以经外科手术切除无神经节细胞的肠管而治愈。然而，有高达40\%的HD患儿在巨结肠根治术后仍可能罹患巨结肠小肠结肠炎（Hirschsprung’s disease associated enterocolitis，HAEC），说明缺乏神经节细胞并非HAEC唯一的病因。HAEC是HD最常见和最严重的并发症，文献报道其发病率为20\%-58\%，复发率达50\%，病死率为1\%-10\%\cite{frykman2012hirschsprung}。
+HAEC的确切发病机制目前仍不清楚\cite{austin2012pathogenesis}。近年来有研究显示，由于先天性巨结肠肠道神经系统的紊乱可能增加肠道对特定病原菌感染和定植的敏感性，肠道微生态失衡可能可能是HAEC的主要发病机制\cite{frykman2012hirschsprung}。巨结肠根治术后发作的HAEC的治疗（去除机械性梗阻病因后）包括肠道休息、肠道灌洗、全身抗生素应用等，表明肠道菌群紊乱可能是HAEC起病和复发的启动因素。如何在源头上明确HAEC致病菌，并阻断肠道微生态失衡的恶性循环，可能是防治HAEC的解决之道。
+近30年来许多临床和动物研究致力于发现HAEC特定的致病菌，尽管有一些致病菌被认为可能与HAEC发病有关，如艰难梭状芽孢杆菌\cite{thomas1982association}，大肠杆菌\cite{thomas1986enterocolitis},轮状病毒\cite{wilson1990microbiological}等，但迄今为止，尚无明确结论，主要原因是受限于依赖细胞培养的技术，以及肠道菌群的复杂性。由于肠道菌群数量庞大，种类繁多，有85\%的肠道细菌无法由培养得到。有学者利用扩增rDNA限制性片段分析技术对一例反复发作HAEC的3岁患儿进行了纵向系列粪便（共15次）检测，发现HAEC发作与特定肠道菌群分布模式有关，并受到应用抗生素的影响\cite{de2010genomics}。
+目前国际上应用宏基因组学技术研究HAEC肠道菌群的工作才刚刚起步。经文献检索，相关发表文章共4篇，其中2篇是本课题组的临床前期研究\cite{yan2014characterization,li2016characterization}。我们在手术中提取HAEC和HD患儿不同肠道部位的粪便标本，比较其肠道菌群特点。研究中最大的发现是，HAEC和HD患儿肠道菌群种类存在明显差异，而远端无神经节细胞肠道和近端有神经节细胞肠道内样本的肠道菌群种类并无明显差别。这表明，有无神经节细胞并不是影响肠道菌群组成的主要决定因素；而有无特定肠道菌群的定植可能是影响HAEC产生和发展的重要原因。同时，我们也发现，肠道菌群分布也跟患儿的年龄是有一定关系的，不同年龄阶段的患儿肠道微生物菌群差异明显。说明肠道菌群随着患儿年龄的改变有所不同，这也符合从新生儿出生时消化道的无菌状态到2岁时接近成人的总体变化规律。我们进一步研究发现，曾经罹患HAEC患儿在症状缓解期肠道菌群构成依然与发病时的HAEC患儿相似，提示导致HAEC发病的特定肠道菌群分布模式可能持续存在，这也可能是HAEC复发率高达50\%的原因\cite{li2016characterization}。
 \subsection{炎症性肠病与肠道菌群紊乱}
-尽管儿科IBD的发病机制和诊断程序与成人IBD相似，但是前者的疾病程度较严重，病情进展较快，易发生并发症，易存在生长迟缓，营养不良等。其病因及发病机制尚不完全明确，目前认为遗传易感性、肠道菌群紊乱以及免疫应答异常对于IBD发病起到贡献作用\cite{J Liang     }。越来越多的证据支持肠道菌群紊乱在IBD发病中的作用。厚壁菌门（\textit{Firmitutes}）,尤其是\textit{Firmitutes prausnitzii}在扩罗恩病患者的粪便中风度减少{a mosca 2016}；另外黏附侵袭性大肠杆菌（adherent-invasive \textit{Escherichia
-coil}，AIEC）和副结核分枝杆菌（Mycobacteriumavium subspecies paratuberculosis，MAP）在IBD发病中作用也相对显著。在2012年，AIEC的EC15和EC10菌株被首次发现于IBD患儿肠道炎症组织中{a negroni}；在体外试验中，AIEC在肠道上皮细胞中的复制增值能力很强，可以诱导肿瘤坏死因子TNF-α分泌，与克罗恩病患者回肠黏膜病变相关{o 2017 comparative }。与健康人相比，克罗恩病患儿肠道内真菌紊乱较为明显，表现为担子菌门（\textit{Basidiomycota}）：子囊菌门（\textit{Ascomycota}）比例降低，以及白色念珠菌（\textit{Candida albicans}）丰度增高\cite{h sokol}。
+尽管儿科IBD的发病机制和诊断程序与成人IBD相似，但是前者的疾病程度较严重，病情进展较快，易发生并发症，易存在生长迟缓，营养不良等。其病因及发病机制尚不完全明确，目前认为遗传易感性、肠道菌群紊乱以及免疫应答异常对于IBD发病起到贡献作用\cite{liang2014role}。越来越多的证据支持肠道菌群紊乱在IBD发病中的作用。厚壁菌门（\textit{Firmitutes}）,尤其是\textit{Firmitutes prausnitzii}在扩罗恩病患者的粪便中丰度减少\cite{mosca2016gut}；另外黏附侵袭性大肠杆菌（adherent-invasive \textit{Escherichia
+coil}，AIEC）和副结核分枝杆菌（\textit{Mycobacteriumavium subspecies paratuberculosis}）在IBD发病中作用也相对显著。在2012年，AIEC的EC15和EC10菌株被首次发现于IBD患儿肠道炎症组织中\cite{negroni2011characterization}；在体外试验中，AIEC在肠道上皮细胞中的复制增值能力很强，可以诱导肿瘤坏死因子TNF-$\alpha$分泌，与克罗恩病患者回肠黏膜病变相关\cite{o2017comparative}。与健康人相比，克罗恩病患儿肠道内真菌紊乱较为明显，表现为担子菌门（\textit{Basidiomycota}）：子囊菌门（\textit{Ascomycota}）比例降低，以及白色念珠菌（\textit{Candida albicans}）丰度增高\cite{sokol2017fungal}。
 \\
 \section{肠道菌群研究与宏基因组学技术}
 宏基因组学技术是指通过直接从样品中提取全部微生物的DNA，构建文库并筛选，利用基因组学的研究策略来研究样品中所包含的全部遗传组成和功能。由于菌群中的大部分微生物尚且被认为“无法培养”，并且传统上认为通过纯培养的方式难以进行微生物进行研究，因此宏基因组方法的出现使研究人员能够通过DNA测序和异源宿主中宏基因组DNA的功能表达，以与培养无关的方式获取和研究这些微生物。宏基因组学揭示了非凡的多样性和新颖性，不仅在微生物群落本身，而且在这些微生物的基因组中。宏基因组分析可涉及基于序列或功能的方法（或两者的组合）。 DNA测序技术的不断改进以及成本的大幅降低使得宏基因组学领域的发展迅速。
-宏基因组学方法实现了大量关于人体内微生物群在人类健康和疾病中的研究。例如：利用红基因组测序技术，Belizario等开辟了基于微生物组治疗方法的新领域，包括噬菌体疗法和CRISPR技术的使用，粪菌移植技术（Fecal Microbial Transplantation，FMT）治疗艰难梭菌感染（Clostridia difficile Infection）等（belizario2015human）。通过宏基组测序分析川崎病（Kawasaki Disease，KD）患者的肠道菌群信息，并揭示了链球菌属丰度增加在其发病急性期所发挥的作用。（kinumaki2015characterization）。
-基于序列的宏基因组学研究向我们提供了越来越多关于微生物群落组成，结构和功能能力的新认识和新建街。宏基因组学已经成功地用于鉴定许多新的基因，蛋白质和次级代谢物，例如具有工业，生物技术，药物和医学相关性的抗生素。测序技术，表达载体，替代宿主系统和新型筛选试验的未来改进和发展将有助于通过揭示新的分类学和遗传多样性进一步推动该领域。通过研究曾经无法深入探索的和未发现的微生物基因组学、生理学、进化生态学，无疑证明了宏基因组学方法的实用性和可靠性，也说明其将来将揭示从基因到物种的更多的创新和多样发现。
-
-本研究使用Illumina Miseq深度测序平台对NEC、HD和HAEC及IBD患儿的肠道菌群进行测序比对研究，藉以全面深度探索NEC患儿肠道菌群纵向分布特点，并比较NEC，HD，HAEC以及IBD患儿肠道菌群定制模式的差异和相似性，揭示特定菌群定植模式或者致病菌在其四种儿科炎症性疾病发病中以及NEC和HAEC所扮演的角色。另外，本研究对人体肠道菌群研究中取样和保存方法对于研究结果的影响及重要性进行总结综述。
-
-
-
-
-本研究综述了人体肠道菌群研究中取样和保存方法对于研究结果的影响及重要性，并使用Illumina Miseq和Hiseq深度测序平台对NEC、HD和HAEC及IBD患儿的肠道菌群进行测序比对研究，藉以全面深度探索NEC患儿肠道菌群纵向分布特点，并比较NEC，HD，HAEC以及IBD患儿肠道菌群定制模式的差异和相似性，揭示特定菌群定植模式或者致病菌在其四种儿科炎症性疾病发病中以及NEC和HAEC所扮演的角色。
+宏基因组学方法实现了大量关于人体内微生物群在人类健康和疾病中的研究。例如：利用红基因组测序技术，Belizario等开辟了基于微生物组治疗方法的新领域，包括噬菌体疗法和CRISPR技术的使用，粪菌移植技术（Fecal Microbial Transplantation，FMT）治疗艰难梭菌感染（Clostridia difficile Infection）等\cite{belizario2015human}。通过宏基组测序分析川崎病（Kawasaki Disease，KD）患者的肠道菌群信息，并揭示了链球菌属丰度增加在其发病急性期所发挥的作用\cite{kinumaki2015characterization}。
+基于序列的宏基因组学研究向我们提供了越来越多关于微生物群落组成，结构和功能能力的新认识和新建街。宏基因组学已经成功地用于鉴定许多新的基因，蛋白质和次级代谢物，例如具有工业，生物技术，药物和医学相关性的抗生素。测序技术，表达载体，替代宿主系统和新型筛选试验的未来改进和发展将有助于通过揭示新的分类学和遗传多样性进一步推动该领域。通过研究曾经无法深入探索的和未发现的微生物基因组学、生理学、进化生态学，无疑证明了宏基因组学方法的实用性和可靠性，也说明其将来将揭示从基因到物种的更多的创新和多样发现。\\
+\section{本研究的主要内容}
+本研究使用Illumina Miseq深度测序平台对NEC、HD和HAEC及IBD患儿的肠道菌群进行测序比对研究，藉以全面深度探索NEC患儿肠道菌群纵向分布特点，并比较NEC，HD，HAEC以及IBD患儿肠道菌群定制模式的差异和相似性，揭示特定菌群定植模式或者致病菌在其四种儿科炎症性疾病发病中以及NEC和HAEC所扮演的角色。另外，本研究对人体肠道菌群研究中取样和保存方法对于研究结果的影响及重要性进行综述。
