--- a/tex/chap2nec.tex
+++ b/tex/chap2nec.tex
@@ -7,33 +7,5 @@
 %%==================================================
 
 %\bibliographystyle{sjtu2}%[此处用于每章都生产参考文献]
-\chapter{绪论}
-\label{chap:introduction}
-\section{人体肠道菌群及其早期定植特点}
-肠道菌群是指定植于人或其他动物消化道内的微生物群落，人体肠道也是体内最大的免疫器官。作为人体本身和外部环境的主要界面，肠道必须保护其免收有害抗原（如毒素和病原体）的侵害，同时容纳和耐受对自身健康有益的共生细菌——这是一项艰巨的任务，因为细菌病原体和共生菌之间平衡的改变将肠道从健康的肠内稳态（intestinal homeostasis）\cite{collier2005innate}转变为不受控制的验证状态，这可能导致肠道本身的损伤，也可能干扰其他系统的正常生理功能，从而与多种疾病的发生发展息息相关，包括炎症性肠病（Inflammatory Bowel Disease，IBD）\cite{ni2017gut}，II型糖尿病\cite{harsch2018role}，自闭症\cite{de2014altered, de2013fecal}等疾病。共生细菌为人类宿主的健康提供诸多保障，包括维持肠内稳态\cite{hooper2001commensal}，保护其免受外界伤害\cite{rakoff2004recognition}，维护和支持消化功能\cite{guarner2006mechanisms}，调节肠道免疫功能\cite{round2009gut,abreu2010toll}等。
-长久以来，新生儿肠道被认为是一种无菌环境，但近年的研究证实了胎粪中的微生物群和羊水中的潜在微生物群的相关性\cite{ardissone2014meconium}，以及早产儿气道内的不动杆菌属Acinetobacter）\cite{lohmann2014airway}，这表明肠道微生物的获取可能从胎儿在非无菌宫内条件下就开始了。然而，在重复这些研究结果之前，考虑到非基于培养的测序方法\cite{pennisi2014our}中细菌污染的影响以及取样时羊膜可能不完整，其结果应被谨慎考虑。
-在生理条件下的胎儿肠道在出生后迅速开始获得共生微生物群；并且如前所述，该过程甚至可开始于子宫内。微生物群的初始组成来源于胎儿母亲的结肠和阴道菌群，阴道分娩的婴儿可以通过产道获得。这些微生物群包括肠杆菌（Enterobacteriae），肠球菌（ Enterococci）和葡萄球菌（Staphylococci）\cite{}（Backhed F 2005 science）。更多研究表明，菌群通过胎盘转移也可能影响肠道微生物组的发育\cite{}（PubMed Aagaard K 2014 sci transl med）。肠道微生物群的获得大致上是一个有顺序的过程，从杆菌门（Bacilli），再到gamma变形菌门（Gammaproteobacteria）和梭菌门（Clostridia），接着其余菌群的连续定植\cite{}（PubMed La Rosa PS 2014）。通过母乳喂养，更多益生元及其他免疫因子被引入倡导，能够后续促进倡导共生菌的生长，进一步发展和改变肠道微生物群，从而有益于婴儿​​\cite{}（PubMed Ouwehand AC 2005 current opin biotechnol）。与剖宫产和/或配方奶喂养的婴儿相比，纯母乳喂养和通过阴道分娩出生的足月婴儿表现出良好的肠道微生物群组成，双歧杆菌（Bifidobacteria）数量较多，艰难梭菌(Clostridium difficile)和大肠杆菌（Escherichia coli）数量较少\cite{}（Penders J, Pediatrics. 2006）。
-
-\section{儿科炎症性肠病与肠道菌群}
-\label{sec:enterocolitis}
-在临床实践中，常见的儿科肠道炎症性疾病包括但不限于坏死性小肠结肠炎（Necrotizing Enterocolitis，NEC）、先天性巨结肠相关性小肠结肠炎（Hirchsprung-Associated Enterocolitis ）和炎症性肠病（Inflammatory Bowel Disease，IBD）；炎症性肠病又包括克罗恩病（Crohn’s Disease，CD）和溃疡性结肠炎（Ulcerative Colitis，UC）。这些疾病严重影响患儿肠道功能，进而严重影响患儿后续生活质量，甚者可危及生命。目前，NEC、HAEC、IBD的发病机制均未明确；既往研究表明，肠道菌群紊乱与上述疾病的发病关系密切。
-
-\subsection{坏死性小肠结肠炎概述}
-坏死性小肠结肠炎（NEC）是新生儿最常见的胃肠道急症之一。它是一种以小肠黏膜缺血性坏死为特征的疾病，与重度炎症、肠道产气菌侵袭、产气侵入肠道壁和门静脉系统相关（new j nejm 2011）。大多数坏死性小肠结肠炎患儿在发病前健康状况、生长情况和喂养情况均良好（hallstrom m j pediatr surg 2006 laboratory paremeters predictive of developing nec in infants born）。早期最常见症状表现为喂养耐受性突然变化。腹部体征包括腹胀、腹部压痛、喂养残留、呕吐（通常为胆汁）、腹泻、血便、肠内喂养管可见胆汁（walsh mc pediatr rev 1988, yu vy 1977 clinical aspects. Med j）。其他非特异体征包括腹壁红斑、痉挛和硬结。非特异性系统性发现包括呼吸暂停、呼吸衰竭，嗜睡，体温不稳定。更严重者可发生由感染性休克引起的低血压，20\%的NEC患儿有菌血症（kliegman rm 1984 nejm）。
-因已发表研究的诊断和数据收集不一致，故其发病率尚未明确（zani a，2015）。在不同地区间的发病率无明显差异：美国一项研究统计表明：在过去25年内NEC的发病率稳定在0.3-2.4例/1000新生儿，且常见于胎龄最小的早产儿中（pickard ss，pediatrics， 2009）；来自其他国家（包括加拿大、日本等）的统计研究也得出了类似的发病率结论（kawase y pediatr int 2006）。然而，新生儿胎龄对NEC发病的影响较大——NEC在早产儿中发病率更高，且与出生体重和孕龄呈负相关：出生体重低于1000g的新生儿发病率最高（尽管不同研究显示发病率在4\%~50\%或更高）；出生体重1501-2000Gd 新生儿，其NEC发病率急剧下降到3.8个/1000活产新生儿（stoll bj 2015 jama）。同样对于胎龄为35-36周的新生儿，其发病率也骤减。尽管总体上存在差异，但来自世界各地的研究数据始终表明，随着胎龄和孕周的降低，NEC发病率增加（holman rc 2006 pediatri preinat epidemio，rees cm pediatr surg 2010, yee wh pediatrics 2012）。
-近年来，尽管NEC的早期识别和积极护理治疗已显著改善其临床结果，但其发病率仍然未降低，特别在早产极低出生体重的婴儿中，其发病率依然居高不下。因而，寻找其病因并相应地采取预防措施显得尤为重要。
-
-\subsection{坏死性小肠结肠炎发病机制与肠道菌群紊乱}
-坏死性小肠结肠炎发病机制尚未明确，但研究表明它是多因素决定的：促炎细胞极联反映加剧的缺血和/或再灌注损伤可能起了重要作用。动物模型中的大量实验研究结果表明，倡导缺血，免疫功能不成熟和免疫功能障碍的相互作用使得肠道菌群易位穿过肠黏膜屏障，导致炎症介质，包括白三烯，肿瘤坏死因子（Tumor Necrosis Factor，TNF），血小板活化因子（Platelet Activating Factor，PAF）扩散与腔内胆汁酸释放，引发不同程度的肠道损伤，并损伤引发全身受累（good m 2015 mucosal immunol, clark da 1990 j pediatr）。流行病学调查表明了感染作为因素之一，包括格兰阴性菌、真菌和病毒（de la cochetiere mf 2004 pediatr res, hodzic z 2017 front pediatr, denning tl 2017 semin perinatol）。
-既往动物实验
-近年来临床和动物研究致力于发现NEC的特定致病菌。有研究表明，早发型NEC发病早期厌氧芽孢杆菌丰度较高;而晚发型 NEC发病前6天大肠志贺杆菌比例增加，发病前3天，阪崎肠杆菌显著升高（Zhou Y plosone 2015）
-
-\subsection{先天性巨结肠和先天性巨结肠相关性肠炎概述}
-\subsection{先天性巨结肠、先天性巨结肠相关性肠炎与肠道菌群紊乱}
-\paragraph{test}
-testtest
-\subparagraph{test2}
-testtest
-
-
-本研究综述了人体肠道菌群研究中取样和保存方法对于研究结果的影响及重要性，并使用Illumina Miseq和Hiseq深度测序平台对NEC、HD和HAEC及IBD患儿的肠道菌群进行测序比对研究，藉以全面深度探索NEC患儿肠道菌群纵向分布特点，并比较NEC，HD，HAEC以及IBD患儿肠道菌群定制模式的差异和相似性，揭示特定菌群定植模式或者致病菌在其四种儿科炎症性疾病发病中以及NEC和HAEC所扮演的角色。
+\chapter{测试}
+\section{测试}
