commit  from github desk
绪论完成（但愿是完成 眼乌子要爆出来了。。。

--- a/tex/app_archive.tex
+++ b/tex/app_archive.tex
@@ -9,15 +9,8 @@
 
 \textbf{儿科炎症性肠病肠道菌群MiSeq测序原始数据}
 
-\begin{description}
-  \item[坏死性小肠结肠炎（NEC）肠道菌群MiSeq测序原始数据]
-  \item[儿科炎症性肠病肠道菌群MiSeq测序原始数据] item
-\end{description}
-
-
 \section{论文相关源代码和原始图标存档}
-\begin{description}
+\textbf{源代码\footnote{本论文使用 \LaTeX 编译生成}}:
+试一试能不能引用\cite{collier2005innate}
 
-  \item[源代码\footnote{本论文使用 \LaTeX 编译生成}]
-  \item[原始图片和表格] item
-\end{description}
+\textbf{原始图片和表格}
