--- a/tex/chap2nec.tex
+++ b/tex/chap2nec.tex
@@ -7,5 +7,6 @@
 %%==================================================
 
 %\bibliographystyle{sjtu2}%[此处用于每章都生产参考文献]
-\chapter{测试}
+\chapter{肠道菌群纵向定植模式与早产儿坏死性小肠结肠炎相关性研究}
+\label{chap:nec}
 \section{测试}
