commit from github desktop
1. 第一章的引用文献搞定
2. 第一章的错别字改了改
3. 目录的tocdepth问题还是搞不定 sigh了又sigh 家父评价的计算机水平不高真是大实话
4. 准备把review搬一搬- -

--- a/tex/app_archive.tex
+++ b/tex/app_archive.tex
@@ -6,11 +6,10 @@
 
 \section{原始测序数据存档}
 \textbf{坏死性小肠结肠炎（NEC）肠道菌群MiSeq测序原始数据}
-
 \textbf{儿科炎症性肠病肠道菌群MiSeq测序原始数据}
 
 \section{论文相关源代码和原始图标存档}
-\textbf{源代码\footnote{本论文使用 \LaTeX 编译生成}}:
-试一试能不能引用\cite{collier2005innate}
+\textbf{源代码\footnote{本论文使用 \LaTeX 编译生成}}
+尝试引用\cite{collier2005innate}
 
 \textbf{原始图片和表格}
